--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       <div class="bg-faded p-4 my-4">
         <div class="row">
           <div class="col-lg-4" style="position:relative; top:0%; transform: translate(0%,20%);">
-            <img class="img-fluid mb-4 mb-lg-0" src="img/slide-2.jpg" alt="">
+            <img class="img-fluid mb-4 mb-lg-0" src="img/logos.png" alt="">
           </div>
           <div class="col-lg-8">
             <div id="accordion" role="tablist">
