--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Principal
+              <a class="nav-link text-uppercase text-expanded text-center" href="index.html">Principal
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">Conocenos</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="about.html">Conocenos</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="blog.html">Un poco de historia</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="blog.html">Un poco de historia</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="historiadores.html">Historiadores</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="historiadores.html">Historiadores</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="galeria.html">Galería</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="galeria.html">Galería</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="contact.html">Contacto</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="contact.html">Contacto</a>
             </li>
           </ul>
         </div>
