--- a/about.html
+++ b/about.html
@@ -180,10 +180,10 @@
                   </div>
                 </div>
               </div>
-              <div class="card text-center">
+              <div class="card">
                 <div class="card-header" role="tab" id="headingThree">
                   <h5 class="mb-0">
-                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <a class="collapsed text-center" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                       <strong>Plan</strong> de <strong>estudios</strong>
                     </a>
                   </h5>
@@ -192,7 +192,7 @@
                   <div class="card-body">
                     <div class="text-heading text-muted text-lg" id="exampleAccordionS" data-children=".item">
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS1" aria-expanded="true" aria-controls="exampleAccordionS1">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS1" aria-expanded="true" aria-controls="exampleAccordionS1">
                           Materias de Primer Semestre
                         </a>
                         <div id="exampleAccordionS1" class="collapse" role="tabpanel">
@@ -210,7 +210,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS2" aria-expanded="false" aria-controls="exampleAccordionS2">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS2" aria-expanded="false" aria-controls="exampleAccordionS2">
                           Materias de Segundo Semestre
                         </a>
                         <div id="exampleAccordionS2" class="collapse" role="tabpanel">
@@ -228,7 +228,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS3" aria-expanded="false" aria-controls="exampleAccordionS3">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS3" aria-expanded="false" aria-controls="exampleAccordionS3">
                           Materias de Tercer Semestre
                         </a>
                         <div id="exampleAccordionS3" class="collapse" role="tabpanel">
@@ -246,7 +246,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS4" aria-expanded="false" aria-controls="exampleAccordionS4">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS4" aria-expanded="false" aria-controls="exampleAccordionS4">
                           Materias de Cuarto Semestre
                         </a>
                         <div id="exampleAccordionS4" class="collapse" role="tabpanel">
@@ -263,7 +263,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS5" aria-expanded="false" aria-controls="exampleAccordionS5">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS5" aria-expanded="false" aria-controls="exampleAccordionS5">
                           Materias de Quinto Semestre
                         </a>
                         <div id="exampleAccordionS5" class="collapse" role="tabpanel">
@@ -280,7 +280,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS6" aria-expanded="false" aria-controls="exampleAccordionS6">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS6" aria-expanded="false" aria-controls="exampleAccordionS6">
                           Materias de Sexto Semestre
                         </a>
                         <div id="exampleAccordionS6" class="collapse" role="tabpanel">
@@ -297,7 +297,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS7" aria-expanded="false" aria-controls="exampleAccordionS7">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS7" aria-expanded="false" aria-controls="exampleAccordionS7">
                           Materias de Septimo Semestre
                         </a>
                         <div id="exampleAccordionS7" class="collapse" role="tabpanel">
@@ -313,7 +313,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS8" aria-expanded="false" aria-controls="exampleAccordionS8">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS8" aria-expanded="false" aria-controls="exampleAccordionS8">
                           Materias de Octavo Semestre
                         </a>
                         <div id="exampleAccordionS8" class="collapse" role="tabpanel">
@@ -329,7 +329,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS9" aria-expanded="false" aria-controls="exampleAccordionS9">
+                        <a class="text-center" class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS9" aria-expanded="false" aria-controls="exampleAccordionS9">
                           Materias de Noveno Semestre
                         </a>
                         <div id="exampleAccordionS9" class="collapse" role="tabpanel">
@@ -342,7 +342,7 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS0" aria-expanded="false" aria-controls="exampleAccordionS0">
+                        <a class="text-center" data-toggle="collapse" data-parent="#exampleAccordionS" href="#exampleAccordionS0" aria-expanded="false" aria-controls="exampleAccordionS0">
                           Materias Optativas
                         </a>
                         <div id="exampleAccordionS0" class="collapse" role="tabpanel">
@@ -585,7 +585,7 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/MarcoG.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Marco Antonio Gutiérrez</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciado en Historia por parte de la Universidad Autónoma de Chihuahua</p>
@@ -604,7 +604,7 @@
                         </div>
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/SandraT.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Sandra Treviño</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciada en Ciencias de la Información por la Facultad de Filosofía y Letras de la UACH</p>
@@ -624,9 +624,9 @@
                       </div>
                     </div>
                     <div class="container">
-                      <div class="card text-center">
+                      <div class="card">
                         <div class="card-body">
-                          <h4 class="card-title">Docentes</h4>
+                          <h4 class="card-title text-center">Docentes</h4>
                           <p class="card-text text-left text-heading text-muted text-lg">
                             <ul>
                               <li>Alicia de los Ríos Merino</li>
